Added support for pkgconfig

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,3 +4,7 @@ include(conanbuildinfo.cmake)
 conan_basic_setup()
 
 add_subdirectory(sources)
+
+set(DEST_DIR "${CMAKE_INSTALL_PREFIX}")
+CONFIGURE_FILE("freetype.pc.in" "freetype.pc" @ONLY)
+install(FILES "${CMAKE_CURRENT_BINARY_DIR}/freetype.pc" DESTINATION lib/pkgconfig)
