--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,21 +10,27 @@ environment:
         - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
           CONAN_VISUAL_VERSIONS: 12
           CONAN_BUILD_TYPES: Release
+          CONAN_VISUAL_RUNTIMES: MD
         - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
           CONAN_VISUAL_VERSIONS: 12
           CONAN_BUILD_TYPES: Debug
+          CONAN_VISUAL_RUNTIMES: MD
         - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
           CONAN_VISUAL_VERSIONS: 14
           CONAN_BUILD_TYPES: Release
+          CONAN_VISUAL_RUNTIMES: MD
         - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
           CONAN_VISUAL_VERSIONS: 14
           CONAN_BUILD_TYPES: Debug
+          CONAN_VISUAL_RUNTIMES: MD
         - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
           CONAN_VISUAL_VERSIONS: 15
           CONAN_BUILD_TYPES: Release
+          CONAN_VISUAL_RUNTIMES: MD
         - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
           CONAN_VISUAL_VERSIONS: 15
           CONAN_BUILD_TYPES: Debug
+          CONAN_VISUAL_RUNTIMES: MD
 
 install:
   - set PATH=%PATH%;%PYTHON%/Scripts/
