- link libm on Linux (pkg-config)
Signed-off-by: SSE4 <tomskside@gmail.com>

--- a/freetype.pc.in
+++ b/freetype.pc.in
@@ -8,5 +8,5 @@ URL: http://freetype.org
 Description: A free, high-quality, and portable font engine.
 Version: @PROJECT_VERSION@
 
-Libs: -L${libdir} @PC_FREETYPE_LIBRARY@ @PC_PNG_LIBRARY@ @PC_BZIP2_LIBRARY@ @PC_ZLIB_LIBRARY@ @PRIVATE_LIBS@
+Libs: -L${libdir} @PC_FREETYPE_LIBRARY@ @PC_PNG_LIBRARY@ @PC_BZIP2_LIBRARY@ @PC_ZLIB_LIBRARY@ @PC_SYSTEM_LIBRARIES@ @PRIVATE_LIBS@
 Cflags: -I${includedir}/freetype2
