--- a/test_package/CMakeLists.txt
+++ b/test_package/CMakeLists.txt
@@ -6,7 +6,7 @@ set(CMAKE_VERBOSE_MAKEFILE TRUE)
 include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
 conan_basic_setup()
 
-find_package(Freetype 2.9.0 REQUIRED)
+find_package(Freetype CONFIG REQUIRED)
 
 file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/OpenSans-Bold.ttf
      DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
@@ -14,4 +14,4 @@ file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/OpenSans-Bold.ttf
 file(GLOB SOURCE_FILES *.c)
 
 add_executable(${PROJECT_NAME} ${SOURCE_FILES})
-target_link_libraries(${PROJECT_NAME} ${FREETYPE_LIBRARY})
+target_link_libraries(${PROJECT_NAME} ${CONAN_LIBS})
